apps/transfer-service/kustomize/overlays/dev/base/common-app/templates/deployment.yaml
---
# Source: common-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-service
  template:
    metadata:
      labels:
        app: transfer-service
    spec:
      containers:
        - name: transfer-service
          image: "harbor.local/banking-demo/transfer-service:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
